[package]
name = "prettier-print"
version = "0.1.0"
edition = "2018"
authors = ["Makoto <makoto@emurasoft.com>"]
documentation = "https://docs.rs/prettier-print/"
license = "MIT"
description = ""
repository = "https://github.com/MakotoE/prettier-print"
readme = "README.md"

[dependencies]
rand = { version = "0.8", features = ["small_rng"] }
getrandom = "0.2"
rand_distr = "0.4"
crossterm = "0.20"

[dev-dependencies]
rstest = "0.10"